# puremvc-c-multicore-framework2

./: .gitignore  CMakeLists.txt
include/: array.h  controller.h  dictionary.h  facade.h  macro_command.h  mediator.h  model.h  notification.h  notifier.h  observer.h  proxy.h  simple_command.h  view.h
src/core/: controller.c  model.c  view.c
src/patterns/collection/: array.c  dictionary.c
src/patterns/command/: macro_command.c  simple_command.c
src/patterns/facade/: facade.c  notifier.c
src/patterns/mediator/: mediator.c
src/patterns/observer/: notification.c  observer.c
src/patterns/proxy/: proxy.c
test/: CMakeLists.txt
test/core/: controller_test.c  controller_test.h  controller_test_command.c  controller_test_command.h  controller_test_command2.c  controller_test_command2.h  controller_test_vo.c  controller_test_vo.h  model_test.c  model_test.h  model_test_proxy.c  model_test_proxy.h  view_test.c  view_test.h  view_test_component.c  view_test_component.h  view_test_mediator.c  view_test_mediator.h  view_test_mediator2.c  view_test_mediator2.h  view_test_mediator3.c  view_test_mediator3.h  view_test_mediator4.c  view_test_mediator4.h  view_test_mediator5.c  view_test_mediator5.h  view_test_mediator6.c  view_test_mediator6.h
test/patterns/collection/: array_test.c  dictionary_test.c
test/patterns/command/: macro_command_test.c  macro_command_test_command.c  macro_command_test_command.h  macro_command_test_sub1command.c  macro_command_test_sub1command.h  macro_command_test_sub2command.c  macro_command_test_sub2command.h  macro_command_test_vo.c  macro_command_test_vo.h  simple_command_test.c
test/patterns/facade/: facade_test.c  facade_test_command.c  facade_test_command.h  facade_test_vo.c  facade_test_vo.h  notifier_test.c
test/patterns/mediator/: mediator_test.c
test/patterns/observer/: notification_test.c  observer_test.c
test/patterns/proxy/: proxy_test.c
